fix mobile size overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,10 +21,24 @@
     width: 100%;
     color: #fff;
 
+    // tablet
     @media only screen 
     and (max-device-width: 768px)
     and (-webkit-min-device-pixel-ratio: 2) {
         display: block;
+        bottom: 0;
+        // height: 80%;
+        // overflow-y: auto;
+    }
+
+    // mobile
+    @media only screen 
+    and (max-device-width: 411px)
+    and (-webkit-min-device-pixel-ratio: 2) {
+        display: block;
+        bottom: 0;
+        height: 80%;
+        overflow-y: auto;
     }
 }
 
